src/types/tests/snapshots/tgbot__types__tests__input__input_media_photo.snap
---
source: src/types/tests/input.rs
expression: actual_data
---
{
  "caption": "test",
  "has_spoiler": true,
  "media": "photo-file-id",
  "parse_mode": "Markdown",
  "show_caption_above_media": true,
  "type": "photo"
}
