src/types/tests/snapshots/tgbot__types__tests__input__input_media_sticker-2.snap
---
source: src/types/tests/input.rs
expression: actual_data
---
{
  "emoji": "🤡",
  "media": "sticker-file-id",
  "type": "sticker"
}
