src/types/tests/snapshots/tgbot__types__tests__input__input_media_sticker.snap
---
source: src/types/tests/input.rs
expression: actual_data
---
{
  "media": "sticker-file-id",
  "type": "sticker"
}
