src/types/tests/snapshots/tgbot__types__tests__input__input_media_venue-2.snap
---
source: src/types/tests/input.rs
expression: actual_data
---
{
  "address": "addr",
  "foursquare_id": "f-id",
  "foursquare_type": "f-type",
  "google_place_id": "g-id",
  "google_place_type": "g-type",
  "latitude": 1.0,
  "longitude": 2.0,
  "title": "test",
  "type": "venue"
}
