src/types/tests/snapshots/tgbot__types__tests__input__input_media_venue.snap
---
source: src/types/tests/input.rs
expression: actual_data
---
{
  "address": "addr",
  "latitude": 1.0,
  "longitude": 2.0,
  "title": "test",
  "type": "venue"
}
