src/types/tests/snapshots/tgbot__types__tests__input__input_media_video-2.snap
---
source: src/types/tests/input.rs
expression: actual_data
---
{
  "__attachments__": [
    {
      "id": "tgbot_file_1",
      "mime_type": null,
      "name": null
    },
    {
      "id": "tgbot_file_2",
      "mime_type": null,
      "name": null
    }
  ],
  "caption": "caption",
  "cover": "cover-id",
  "duration": 100,
  "has_spoiler": true,
  "height": 200,
  "media": "attach://tgbot_file_1",
  "parse_mode": "Markdown",
  "show_caption_above_media": true,
  "start_timestamp": 450,
  "supports_streaming": true,
  "thumbnail": "attach://tgbot_file_2",
  "type": "video",
  "width": 200
}
