src/types/tests/snapshots/tgbot__types__tests__input__input_media_video.snap
---
source: src/types/tests/input.rs
expression: actual_data
---
{
  "caption": "test",
  "media": "video-file-id",
  "type": "video"
}
