src/types/tests/snapshots/tgbot__types__tests__input__input_media_voice_note-2.snap
---
source: src/types/tests/input.rs
expression: info.clone()
---
{
  "caption": "test",
  "caption_entities": [
    {
      "offset": 0,
      "length": 2,
      "type": "bold"
    }
  ],
  "duration": 1
}
