src/types/tests/snapshots/tgbot__types__tests__input__input_media_voice_note-3.snap
---
source: src/types/tests/input.rs
expression: info.clone()
---
{
  "caption": "test",
  "parse_mode": "MarkdownV2",
  "duration": 1
}
