src/types/tests/snapshots/tgbot__types__tests__input__input_media_voice_note-4.snap
---
source: src/types/tests/input.rs
expression: info
---
{
  "caption": "test",
  "caption_entities": [
    {
      "offset": 0,
      "length": 1,
      "type": "bold"
    }
  ],
  "duration": 1
}
