src/types/tests/snapshots/tgbot__types__tests__input__input_media_voice_note.snap
---
source: src/types/tests/input.rs
expression: data
---
{
  "type": "voice_note",
  "media": "test"
}
