src/types/tests/snapshots/tgbot__types__tests__input__input_message_content_contact-2.snap
---
source: src/types/tests/input.rs
expression: content
---
{
  "first_name": "V",
  "phone_number": "+79001231212"
}
